--- a/petstore-domain/pom.xml
+++ b/petstore-domain/pom.xml
@@ -12,6 +12,14 @@
 	<name>petstore-domain</name>
 
 	<dependencies>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-annotations</artifactId>
