Try to be friendly with maven 2.2 resource interpolation under windows one more time

--- a/petstore-app/pom.xml
+++ b/petstore-app/pom.xml
@@ -83,6 +83,11 @@
         </dependency>
     </dependencies>
 
+    <properties>
+        <!-- maven-resources-plugin does not seen to interpolate project.baseUri, help it out -->
+        <projectBaseUri>${project.baseUri}</projectBaseUri>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
