--- a/petstore-app/src/test/resources/views.properties
+++ b/petstore-app/src/test/resources/views.properties
@@ -1,2 +1,2 @@
-templates.base.url = file://${project.basedir}/src/main/webapp/WEB-INF/views/
-velocity.config.url = file://${project.basedir}/src/main/webapp/WEB-INF/velocity.properties
+templates.base.url = ${projectBaseUri}/src/main/webapp/WEB-INF/views/
+velocity.config.url = ${projectBaseUri}/src/main/webapp/WEB-INF/velocity.properties
