A custom spring view that should play nicer with VelocityTools 2.0.x (less side effects I hope)

--- a/petstore-app/src/main/webapp/WEB-INF/velocity.properties
+++ b/petstore-app/src/main/webapp/WEB-INF/velocity.properties
@@ -43,7 +43,7 @@ runtime.introspector.uberspect = org.apache.velocity.util.introspection.Uberspec
 
 # Use log4j logging
 runtime.log.logsystem.class = org.apache.velocity.runtime.log.Log4JLogChute
-runtime.log.logsystem.log4j.category=org.apache.velocity.runtime.log
+runtime.log.logsystem.log4j.logger=org.apache.velocity.runtime.log
 
 # EVENT HANDLER
 # ----------------------------------------------------------------------------
