--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>com.pyxis</groupId>
             <artifactId>hamcrest-matchers</artifactId>
-            <version>1.2-SNAPSHOT</version>
+            <version>1.2</version>
             <scope>test</scope>
         </dependency>
         <!-- Declare junit after hamcrest because junit includes org.hamcrest.Matcher
@@ -129,7 +129,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -152,7 +152,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
                 <exclusions>
                     <exclusion>
                         <groupId>commons-logging</groupId>
@@ -163,42 +163,42 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context-support</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-web</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-webmvc</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
-                <version>3.0.1.RELEASE</version>
+                <version>3.0.2.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>3.5.0-CR-2</version>
+                <version>3.5.1-Final</version>
             </dependency>
             <dependency>
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-annotations</artifactId>
-                <version>3.5.0-CR-2</version>
+                <version>3.5.1-Final</version>
             </dependency>
             <!--  JSR 303 with Hibernate Validator -->
             <dependency>
