--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.pyxis</groupId>
             <artifactId>hamcrest-matchers</artifactId>
-            <version>1.2</version>
+            <version>1.3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <!-- Declare junit after hamcrest because junit includes org.hamcrest.Matcher
