--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.pyxis</groupId>
-            <artifactId>hamcrest-matchers</artifactId>
+            <groupId>com.pyxis.matchers</groupId>
+            <artifactId>all-matchers</artifactId>
             <version>1.3-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
