--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -156,6 +156,7 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.0.1-sr-1</version>
                 <configuration>
                     <wait>false</wait>
                     <container>
