--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,12 @@
             <version>1.5.10</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.natpryce</groupId>
+            <artifactId>maybe</artifactId>
+            <version>1.2-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
