--- a/petstore-app/src/main/webapp/WEB-INF/web.xml
+++ b/petstore-app/src/main/webapp/WEB-INF/web.xml
@@ -69,10 +69,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>
-                /WEB-INF/petstore.xml
-                classpath:persistence.xml
-            </param-value>
+			<param-value>/WEB-INF/petstore.xml</param-value>
 		</init-param>
         <load-on-startup>2</load-on-startup>
     </servlet>
