--- a/petstore-infrastructure/pom.xml
+++ b/petstore-infrastructure/pom.xml
@@ -89,16 +89,6 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <jdbc.url>jdbc:mysql://localhost:3306/petstore_test</jdbc.url>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <executions>
                     <execution>
@@ -113,16 +103,6 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <includes>
-                    <include>database.properties</include>
-                </includes>
-                <filtering>true</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <excludes>
-                    <exclude>database.properties</exclude>
-                </excludes>
             </resource>
         </resources>
         <testResources>
@@ -177,7 +157,7 @@
             <id>test</id>
             <activation>
                 <property>
-                    <name>env.type</name>
+                    <name>env.type</name>                           
                     <value>test</value>
                 </property>
             </activation>
@@ -187,9 +167,8 @@
                         <groupId>com.carbonfive.db-support</groupId>
                         <artifactId>db-migration-maven-plugin</artifactId>
                         <version>0.9.9-m2</version>
-                        <!-- use custom naming strategy to fit hibernate defaults -->
                         <configuration>
-                            <url>${jdbc.url}</url>
+                            <url>jdbc:mysql://localhost:3306/petstore_test</url>
                             <username>${jdbc.username}</username>
                             <password>${jdbc.password}</password>
                         </configuration>
@@ -205,11 +184,11 @@
             </build>
         </profile>
         <profile>
-            <id>system</id>
+            <id>production</id>
             <activation>
                 <property>
                     <name>env.type</name>
-                    <value>system</value>
+                    <value>production</value>
                 </property>
             </activation>
             <build>
