--- a/petstore-infrastructure/pom.xml
+++ b/petstore-infrastructure/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>petstore</artifactId>
@@ -79,10 +80,10 @@
             <artifactId>commons-collections</artifactId>
             <scope>test</scope>
         </dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-		</dependency>        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -97,6 +98,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2</version>
+                <configuration>
+                    <mainClass>com.pyxis.petstore.nist.InternetTimeServer</mainClass>
+                    <arguments>
+                        <argument>${timeServer.port}</argument>
+                    </arguments>
+                </configuration>
             </plugin>
         </plugins>
 
@@ -157,7 +169,7 @@
             <id>test</id>
             <activation>
                 <property>
-                    <name>env.type</name>                           
+                    <name>env.type</name>
                     <value>test</value>
                 </property>
             </activation>
