--- a/petstore-system-tests/pom.xml
+++ b/petstore-system-tests/pom.xml
@@ -82,6 +82,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.objenesis.windowlicker</groupId>
+            <artifactId>windowlicker-web</artifactId>
+            <version>DEV</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
@@ -93,7 +98,7 @@
     </dependencies>
 
     <properties>
-        <webdriver.factory.class>test.support.com.pyxis.petstore.web.SingleInstanceWebDriverFactory
+        <webdriver.factory.class>test.support.com.pyxis.petstore.web.webdriver.SingleInstanceWebDriverFactory
         </webdriver.factory.class>
     </properties>
 
