Upgrade to hamcrest-matchers 1.3

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.pyxis.matchers</groupId>
             <artifactId>all-matchers</artifactId>
-            <version>1.3-SNAPSHOT</version>
+            <version>1.3</version>
             <scope>test</scope>
         </dependency>
         <!-- Declare junit after hamcrest because junit includes org.hamcrest.Matcher
