--- a/petstore-infrastructure/src/test/resources/migration.properties
+++ b/petstore-infrastructure/src/test/resources/migration.properties
@@ -1,1 +1,1 @@
-migrations.path = ${project.basedir}/${pom.build.scriptSourceDirectory}/migrations
+migrations.path = ${project.build.scriptSourceDirectory}/migrations
